# mangax

./: .megaignore  README.md  desktop.ini  note.txt  package-lock.json
admin/: package-lock.json  package.json
admin/src/app/: layout.js  page.js
admin/src/components/: navbar.js
client/: .env  next.config.mjs  package-lock.json  package.json  tailwind.config.ts  tsconfig.json
client/src/api/: api.ts
client/src/app/: globals.css  layout.tsx  page.js  page.tsx
client/src/components/: Following.js  GoBack.js  (+23 more)
clienttt/: package-lock.json  package.json
cover_image/: 460dd466-4c1d-4198-be3d-a0008c0e4e55.webp.tmp
server/: .env  index.js  package-lock.json  package.json
server/controller/: auth_translator_group.controller.js  auth_user_and_role.controller.js  translator_data.controller.js  translator_group.controller.js  translator_profile.controller.js  user.controller.js  user_related_data.controller.js
server/route/: auth_translator_group.route.js  auth_user.route.js  auth_user_and_role.route.js  translator_data.route.js  translator_group.route.js  translator_profile.route.js  user.route.js  user_related_data.route.js
server/util/: authenticate_translator.js  authenticate_user.js  init_owner.js  limit_api.js  upload_cover.js
server_rust/: .env  Cargo.toml  README.md
server_rust/src/: main.rs
server_rust/src/controller/: login_user_auth_controller.rs  mod.rs  register_user_auth_controller.rs
server_rust/src/db/: connection.rs
server_rust/src/route/: mod.rs  user_auth_route.rs
tgroup/: .env  next.config.mjs  package-lock.json  package.json
(+79 files in other folders)
